# scout_mini_real_nav

./: .gitignore  frames_2026-02-11_15.31.47.gv
my_scout_mini_project/scout_mini_ros2/scout_mini_base/config/: scout_mini.yaml
my_scout_mini_project/scout_mini_ros2/scout_mini_base/launch/: base_launch.py  scout_real.launch.py
my_scout_mini_project/scout_mini_ros2/scout_mini_description/: CMakeLists.txt
my_scout_mini_project/scout_mini_ros2/scout_mini_description/config/: scout_cartographer.lua  scout_nav2.yaml
my_scout_mini_project/scout_mini_ros2/scout_mini_description/launch/: cartographer_real.launch.py  description_launch.py  navigation.launch.py
my_scout_mini_project/scout_mini_ros2/scout_mini_description/rviz/: scout_mini.rviz
my_scout_mini_project/scout_mini_ros2/scout_mini_description/urdf/: scout_mini.urdf.xacro
my_scout_mini_project/scout_mini_ros2/scout_mini_description/worlds/: turtlebot3_slow.world
my_scout_mini_project/scout_mini_ros2/scout_mini_hardware/src/: scout_mini_hardware.cpp
src/my_scout_mini_project/scout_mini_ros2/scout_mini_base/config/: scout_mini.yaml
src/my_scout_mini_project/scout_mini_ros2/scout_mini_base/launch/: scout_real.launch.py
src/my_scout_mini_project/scout_mini_ros2/scout_mini_description/config/: scout_cartographer.lua  scout_nav2.yaml
src/my_scout_mini_project/scout_mini_ros2/scout_mini_description/launch/: cartographer.launch.py  headless_sim_launch.py  navigation.launch.py  scout_auto.launch.py
src/my_scout_mini_project/scout_mini_ros2/scout_mini_hardware/: package.xml
(+5 files in other folders)
